Syntax changes to put identifiers before the type similar to Typescript

--- a/samples/Sample/Sample.csproj
+++ b/samples/Sample/Sample.csproj
@@ -9,6 +9,10 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="AnotherClass.lang" />
     <None Remove="input.lang" />
